<resources>
    <string name="app_name">ContactTask</string>
    <string name="contact_name">Contact Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="show_all">Show All</string>
    <string name="show_name_only">Show Name Only</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email">Email:</string>
    <string name="name">Name</string>
</resources>