<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient_main_drawable"
    android:orientation="vertical"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/login_IV"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/contact_us" />

    <EditText
        android:id="@+id/login_userName_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:hint="@string/user_name"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/login_password_ET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:hint="@string/password"
        android:inputType="textWebPassword"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_login_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/black"
        android:text="@string/login"
        android:textAllCaps="false"
        app:cornerRadius="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_forgot_Btn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:backgroundTint="@color/black"
            android:text="@string/forgot_password"
            android:textAllCaps="false"
            app:cornerRadius="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_signUp_Btn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/black"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:cornerRadius="5dp" />
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>