<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/gradient_activity_drawable"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Activities.AddEditContactActivity">

    <ImageView
        android:id="@+id/login_IV"
        android:layout_width="145dp"
        android:layout_height="145dp"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="80dp"
        android:src="@drawable/add_contact" />

    <EditText
        android:id="@+id/contact_userNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:hint="@string/contact_name"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/contact_lastNameET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:hint="@string/last_name"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/contact_phoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="5dp"
        android:background="@color/white"
        android:hint="@string/phone_number"
        android:padding="10dp"
        android:textColorHint="@color/black"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contact_saveBtn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/black"
            android:text="@string/save"
            android:textAllCaps="false"
            app:cornerRadius="5dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/contact_backBtn"
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/black"
            android:text="@string/back"
            android:textAllCaps="false"
            app:cornerRadius="5dp" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>